# Parallel-Shooter

./: .gitignore  CMakeLists.txt  Makefile  README.md
GFX/: CMakeLists.txt
GFX/SFML-2.5.1/: CMakeLists.txt
GFX/SFML-2.5.1/src/SFML/System/Win32/: ClockImpl.cpp
example/dodger/: Makefile
example/dodger/source/: collision.cpp  dodger.cpp  ennemies.cpp  player.cpp  timer.cpp
example/pong/: Makefile
example/pong/source/: main.cpp
example/shooter/: Makefile
example/shooter/include/: shooter.h
example/shooter/source/: main.cpp  player.cpp
include/: dodger.h  parallel-shooter.h  shooter.h
lib/: CMakeLists.txt
lib/cpp-core/: CMakeLists.txt  Makefile
lib/cpp-core/include/: camera.hpp  core.h  core.hpp  displayableObject.hpp  gameObject.hpp  input.hpp  inputManager.hpp  mouse.hpp  pair.hpp  scene.hpp  sceneManager.hpp  textObject.hpp
lib/cpp-core/src/: camera.cpp  core.cpp  displayableObject.cpp  gameObject.cpp  input.cpp  inputManager.cpp  pair.cpp  scene.cpp  sceneManager.cpp  textObject.cpp
lib/cpp-ui/: CMakeLists.txt  Makefile
lib/cpp-ui/include/: ui.hpp
lib/cpp-ui/src/: ui.cpp
source/: game.cpp  initScene.cpp  main.cpp  menu.cpp  options.cpp  scene.cpp
