PROJECT(cpp-ui VERSION 1.0.0.0 LANGUAGES CXX)

SET(LIB_NAME cpp-ui)

INCLUDE_DIRECTORIES (
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

ADD_LIBRARY(${LIB_NAME} STATIC 
    src/ui.cpp
)

TARGET_INCLUDE_DIRECTORIES(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

TARGET_LINK_LIBRARIES(${LIB_NAME} PUBLIC sfml-system sfml-graphics sfml-window)